tests/archived/snapshots/authorize:configuration_id:response.snap
---
source: tests/authorize.rs
assertion_line: 36
expression: "&response"
---
code: "[code]"
state: "1234"
redirect_uri: "http://localhost:3000/callback"
