tests/archived/snapshots/authorize:scope:response.snap
---
source: tests/vci_authorize.rs
assertion_line: 197
expression: "&response"
---
code: "[code]"
state: "1234"
redirect_uri: "http://localhost:3000/callback"
