tests/archived/snapshots/create_offer:pre-authorized:state.snap
---
source: tests/create_offer.rs
assertion_line: 51
expression: "&state"
---
subject_id: normal_user
stage:
  offered:
    items:
      - AuthorizationDetail:
          type: openid_credential
          credential_configuration_id: EmployeeID_W3C_VC
        credential_configuration_id: EmployeeID_W3C_VC
        credential_identifiers:
          - PHLEmployeeID
    tx_code: "[tx_code]"
expires_at: "[expires_at]"
