tests/archived/snapshots/credential:identifier:response.snap
---
source: tests/credential.rs
assertion_line: 75
expression: "&response"
---
credential: "[credential]"
c_nonce: "[c_nonce]"
c_nonce_expires_in: 599
notification_id: "[notification_id]"
